# connector-proxy-lambda-demo

./: .gitignore  Dockerfile  Makefile  README.md  deploy-integrate.md  docker-compose.yml  integrating.md  make_zip.sh  pyproject.toml
connector_proxy_lambda_demo/: lambda_function.py
tests/unit/: lambda_function_test.py
