[tool.poetry]
name = "connector-proxy-lambda-demo"
version = "0.1.0"
description = ""
authors = ["Jon Herron <jon.herron@yahoo.com>"]
readme = "README.md"
packages = [{include = "connector_proxy_lambda_demo"}]

[tool.poetry.dependencies]
python = "3.10.*"
spiffworkflow-proxy = {git = "https://github.com/sartography/spiffworkflow-proxy"}
connector-http = {git = "https://github.com/sartography/connector-http.git"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
